new file:   Paper/HistoryIA 4.synctex(busy) 	modified:   Paper/HistoryIA.pdf 	modified:   Paper/HistoryIA.synctex.gz 	modified:   Paper/HistoryIA.tex 	modified:   Paper/SECTIONS/section_A.tex 	modified:   Paper/SECTIONS/section_B.tex 	new file:   Paper/indent.log

--- a/Paper/HistoryIA.tex
+++ b/Paper/HistoryIA.tex
@@ -15,6 +15,7 @@
 \newcommand{\subtitle}[1]{%
   \posttitle{%
     \par\end{center}
+    \centering
     \large#1
     \vskip0.5em}%
 }
@@ -96,10 +97,9 @@ letterpaper
 \usepackage{subfiles}
 
 \title{History Internal Assessment}
-\subtitle{Guiding Question: How did the Export of Southern Raw Cotton to Great Britain Influence Its Willingness to Recognize the
-Confederate States of America as a Sovereign Nation?}
+\subtitle{Guiding Question: How did British Dependence on Southern Cotton Influence Its Willingness to Recognize the Sovereignty Confederate States of America (CSA)?}
 \author{IB History of the Americas}
-\date{\textbf{Word Count: 2626}}
+\date{\textbf{Word Count: 2171}}
 
 \begin{document}
 
