--- a/Paper/SECTIONS/section_A.tex
+++ b/Paper/SECTIONS/section_A.tex
@@ -1,16 +1,16 @@
 % !TeX root = ../HistoryIA.tex
 
-This paper seeks to investigate the question: \flq{}\textit{How did the Export of Southern Raw Cotton to Great Britain Influence Its Willingness to Recognize the
-Confederate States of America as a Sovereign Nation?}\frq{}. It is well-known that the southern United States is a largely agrarian region of the nation, and further that 
-the economy of these states has, since the colonial era, been heavily dependent on the exportation of various \flq{}cash crops\frq{}. Cotton, the crop with which 
-the 19th century south is most associated, became the staple export of the region, and indeed may be argued to have kick-started or at least supported the 
-lucrative textile industry of Great Britain. In this paper I examine the economic codependency of the Antebellum South (and subsequently the of the 
-Confederate States of America [CSA]) with Great Britain, and the effects of this relationship on the prospect of the British Parliament's diplomatic 
-recognition of the CSA as a sovereign nation. To do this, I shall rely on the vast contemporary records of exports and manufactures, the body of post-
-contemporary literature regarding the relations of both nations, and the large base of correspondences and personal records of those involved.
+This paper seeks to investigate the question: \flq{}\emph{How did British Dependence on Southern Cotton Influence Its Willingness to Recognize the Sovereignty Confederate 
+States of America (CSA)?}\frq{}. It is well-known that the southern United States is a largely agrarian region of the nation, and further that
+the economy of these states has, since the colonial era, been heavily dependent on the exportation of various \flq{}cash crops\frq{}. Cotton, the crop with which
+the 19th century south is most associated, became the staple export of the region, and indeed may be argued to have kick-started or at least supported the
+lucrative textile industry of Great Britain. In this paper I examine the economic codependency of the Antebellum South (and subsequently the of the
+Confederate States of America) and Great Britain, and the effects of this relationship on the prospect of British
+recognition of the sovereignty of the CSA. To do this, I shall rely on the vast contemporary records of exports and manufactures, the body of modern 
+literature regarding the relations of both nations, and the base of correspondences and records of those involved.
 
-A source that shall be relied upon heavily in assessing the economic reliance of the Antebellum South on cotton in the decades leading up to the war is 
-Douglass C. North's \citetitle{northeconomicgrowth1966} (1966). In this book, North argues that the critical period of economic development in the United States, 
+A source that shall be relied upon heavily in assessing the economic reliance of the Antebellum South on cotton in the decades leading up to the war is
+Douglass C. North's \citetitle{northeconomicgrowth1966} (1966). In this book, North argues that the critical period of economic development in the United States,
 contrary to the accepted narrative at the time, which supposed it to have taken place in the reconstruction era or later, in fact occurred between the
 years 1790 and 1860. Though this argument is outside the scope of this paper, it should be noted that this source is far from modern, and is likely
 to include some outdated information or analysis, as is the nature of the field. The work has, however, maintained relevance into recent years
@@ -18,9 +18,9 @@ through the fact that it provides vast quantities of data, compiled from various
 the South, which are readily available for analysis and interpretation.
 
 For contemporary reference on the diplomatic affairs of the CSA with Great Britain during the Civil War, I have found \citetitle{davismessagespapers1966}
-to be an excellent primary account of the Confederate perception of diplomatic prospects in Great Britain. This source provides a near-comprehensive 
+to be an excellent primary account of the Confederate perception of diplomatic prospects in Great Britain. This source provides a near-comprehensive
 record of the reports sent from the ambassadors of the CSA in Britain and received by the officials of the nation. The value of this source is difficult
 to understate, as it provides ample contemporary evidence for the state of affairs between the two parties on which this paper shall focus, and further
 contains much reference to the role of cotton in these affairs. The obvious limitation of this source comes from the fact that, though skilled diplomats,
-the authors of the letters and reports contained within the source were heavily biased towards the Confederacy, and as such their perception of the 
-prospect of British intervention often failed to reflect the truth of the matter. 
+the authors of the letters and reports contained within the source were heavily biased towards the Confederacy, and as such their perception of the
+prospect of British intervention often failed to reflect the truth of the matter.
